[package]
name = "move2miden"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
miden-assembly = "0.7"
move-binary-format = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.9.3" }

[dev-dependencies]
move-compiler = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.9.3" }
miden-vm = "0.7"
